[release/1.0.0] news changes