@@ -23,7 +23,7 @@ import java.util.*;
 @ExtendWith(MockitoExtension.class)
 public class PrimitiveUtilTest {
     public static final LocalDate TEST_MIN_LOCALDATE = LocalDate.of(1901, 1, 1);
-//    public static final LocalTime TEST_MAX_LOCALTIME = LocalTime.of(23, 59, 59, 999);
+    //    public static final LocalTime TEST_MAX_LOCALTIME = LocalTime.of(23, 59, 59, 999);
     public static final LocalTime TEST_MIN_LOCALTIME = LocalTime.of(0, 0, 0, 0);
     public static final LocalDateTime TEST_MIN_LOCALDATETIME = LocalDateTime.of(TEST_MIN_LOCALDATE, TEST_MIN_LOCALTIME);
 //    public static final LocalDateTime TEST_MAX_LOCALDATETIME = LocalDateTime.of(LocalDate.now(), TEST_MAX_LOCALTIME);
@@ -36,15 +36,15 @@ public class PrimitiveUtilTest {
         Assertions.assertDoesNotThrow(() -> PrimitiveUtil.formatMask(1));
         Assertions.assertDoesNotThrow(() -> PrimitiveUtil.formatMask(-11));
 
-        Assertions.assertEquals(PrimitiveUtil.formatMask(-1),"#");
-        Assertions.assertEquals(PrimitiveUtil.formatMask(0),"#");
-        Assertions.assertEquals(PrimitiveUtil.formatMask(1),"#.#");
-        Assertions.assertEquals(PrimitiveUtil.formatMask(2),"#.##");
+        Assertions.assertEquals(PrimitiveUtil.formatMask(-1), "#");
+        Assertions.assertEquals(PrimitiveUtil.formatMask(0), "#");
+        Assertions.assertEquals(PrimitiveUtil.formatMask(1), "#.#");
+        Assertions.assertEquals(PrimitiveUtil.formatMask(2), "#.##");
 
-        Assertions.assertEquals(PrimitiveUtil.formatDouble(0.123,0),"0");
-        Assertions.assertEquals(PrimitiveUtil.formatDouble(0.123,1),"0.1");
-        Assertions.assertEquals(PrimitiveUtil.formatDouble(0.123,2),"0.12");
-        Assertions.assertEquals(PrimitiveUtil.formatDouble(0.123,3),"0.123");
+        Assertions.assertEquals(PrimitiveUtil.formatDouble(0.123, 0), "0");
+        Assertions.assertEquals(PrimitiveUtil.formatDouble(0.123, 1), "0.1");
+        Assertions.assertEquals(PrimitiveUtil.formatDouble(0.123, 2), "0.12");
+        Assertions.assertEquals(PrimitiveUtil.formatDouble(0.123, 3), "0.123");
 
     }
 
@@ -57,7 +57,7 @@ public class PrimitiveUtilTest {
 
         Assertions.assertFalse(PrimitiveUtil.isPrimitiveValue(new Object()));
 
-        var primitives=List.of(
+        var primitives = List.of(
                 String.class.getName(),
                 Byte.class.getName(),
                 UUID.class.getName(),
@@ -81,7 +81,7 @@ public class PrimitiveUtilTest {
     @Test
     @DisplayName("Deve validar toString")
     public void UI_CHECK_toString() {
-        List.of("0",12D,1L,1,LocalDate.now(),LocalTime.now(), LocalDateTime.now(),UUID.randomUUID())
+        List.of("0", 12D, 1L, 1, LocalDate.now(), LocalTime.now(), LocalDateTime.now(), UUID.randomUUID())
                 .forEach(value -> {
                     Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toString(value));
                 });
@@ -90,29 +90,29 @@ public class PrimitiveUtilTest {
         var tm = LocalTime.of(22, 37, 12);
         Assertions.assertDoesNotThrow(() -> new PrimitiveUtil());
 
-        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toString((Object)LocalDateTime.now()));
-        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toString((Object)LocalDate.now()));
-        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toString((Object)LocalTime.now()));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toString((Object) LocalDateTime.now()));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toString((Object) LocalDate.now()));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toString((Object) LocalTime.now()));
         Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toString(new Object()));
-        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toString((Object)true));
-        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toString((Object)false));
-        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toString((Object)10L));
-        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toString((Object)10.1D));
-        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toString((Object)10));
-        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toString((Object)""));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toString((Object) true));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toString((Object) false));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toString((Object) 10L));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toString((Object) 10.1D));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toString((Object) 10));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toString((Object) ""));
         Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toString((Object) null));
-        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toString((Object)new File("/tmp/test")));
-        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toString((Object)UUID.randomUUID()));
-        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toString((Object)URI.create("http://localhost:8080")));
-        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toString((Object)new URL("http://localhost:8080")));
-        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toString((Object)Path.of("http://localhost:8080")));
-        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toString((Object)Object.class));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toString((Object) new File("/tmp/test")));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toString((Object) UUID.randomUUID()));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toString((Object) URI.create("http://localhost:8080")));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toString((Object) new URL("http://localhost:8080")));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toString((Object) Path.of("http://localhost:8080")));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toString((Object) Object.class));
 
         Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toString(LocalDateTime.now()));
         Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toString(LocalDate.now()));
         Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toString(LocalTime.now()));
         Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toString(new Object()));
-        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toString((Object)null));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toString((Object) null));
         Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toString(true));
         Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toString(false));
         Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toString(10L));
@@ -159,13 +159,13 @@ public class PrimitiveUtilTest {
     @DisplayName("Deve validar toLong")
     public void UI_CHECK_toLong() {
 
-        List.of("0",12D,1L,1,LocalDate.now(),LocalTime.now(), LocalDateTime.now(),UUID.randomUUID())
-                        .forEach(value -> {
-                            Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toLong(value));
-                        });
+        List.of("0", 12D, 1L, 1, LocalDate.now(), LocalTime.now(), LocalDateTime.now(), UUID.randomUUID())
+                .forEach(value -> {
+                    Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toLong(value));
+                });
 
         Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toLong(""));
-        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toLong((String)null));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toLong((String) null));
         Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toLong("100"));
         Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toLong("100.1"));
         Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toLong(true));
@@ -174,13 +174,13 @@ public class PrimitiveUtilTest {
 
         Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toLong((LocalDate) null));
         Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toLong((LocalTime) null));
-        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toLong((LocalDateTime)null));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toLong((LocalDateTime) null));
         Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toLong(CorePublicConsts.MIN_LOCALDATE));
         Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toLong(CorePublicConsts.MIN_LOCALTIME));
         Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toLong(CorePublicConsts.MIN_LOCALDATETIME));
 
         Assertions.assertEquals(PrimitiveUtil.toLong(""), 0);
-        Assertions.assertEquals(PrimitiveUtil.toLong((String)null), 0);
+        Assertions.assertEquals(PrimitiveUtil.toLong((String) null), 0);
         Assertions.assertEquals(PrimitiveUtil.toLong("100"), 100);
         Assertions.assertEquals(PrimitiveUtil.toLong("100.1"), 0);
         Assertions.assertEquals(PrimitiveUtil.toLong(true), 1);
@@ -188,7 +188,7 @@ public class PrimitiveUtilTest {
         Assertions.assertEquals(PrimitiveUtil.toLong(1.5), 1);
 
         Assertions.assertEquals(PrimitiveUtil.toLong((LocalDate) null), 0);
-        Assertions.assertEquals(PrimitiveUtil.toLong((LocalTime)null), 0);
+        Assertions.assertEquals(PrimitiveUtil.toLong((LocalTime) null), 0);
         Assertions.assertEquals(PrimitiveUtil.toLong((LocalDateTime) null), 0);
         Assertions.assertEquals(PrimitiveUtil.toLong(CorePublicConsts.MIN_LOCALDATE), CorePublicConsts.MIN_LOCALDATE.toEpochDay());
         Assertions.assertEquals(PrimitiveUtil.toLong(CorePublicConsts.MIN_LOCALTIME), CorePublicConsts.MIN_LOCALTIME.toSecondOfDay());
@@ -199,23 +199,23 @@ public class PrimitiveUtilTest {
     @DisplayName("Deve validar toInt")
     public void UI_CHECK_toInt() {
 
-        List.of("0",12D,1L,1,LocalDate.now(),LocalTime.now(), LocalDateTime.now(),UUID.randomUUID())
+        List.of("0", 12D, 1L, 1, LocalDate.now(), LocalTime.now(), LocalDateTime.now(), UUID.randomUUID())
                 .forEach(value -> {
                     Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toInt(value));
                 });
 
-        Assertions.assertDoesNotThrow(()-> PrimitiveUtil.toInt((String)null));
-        Assertions.assertDoesNotThrow(()-> PrimitiveUtil.toInt(""));
-        Assertions.assertDoesNotThrow(()-> PrimitiveUtil.toInt("100"));
-        Assertions.assertDoesNotThrow(()-> PrimitiveUtil.toInt("100.1"));
-        Assertions.assertDoesNotThrow(()-> PrimitiveUtil.toInt("9999999999999999999999999"));
-        Assertions.assertDoesNotThrow(()-> PrimitiveUtil.toInt(100));
-        Assertions.assertDoesNotThrow(()-> PrimitiveUtil.toInt(100.1));
-        Assertions.assertDoesNotThrow(()-> PrimitiveUtil.toInt(true));
-        Assertions.assertDoesNotThrow(()-> PrimitiveUtil.toInt(false));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toInt((String) null));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toInt(""));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toInt("100"));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toInt("100.1"));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toInt("9999999999999999999999999"));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toInt(100));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toInt(100.1));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toInt(true));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toInt(false));
         Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toInt((LocalDate) null));
         Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toInt((LocalTime) null));
-        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toInt((LocalDateTime)null));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toInt((LocalDateTime) null));
         Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toInt(CorePublicConsts.MIN_LOCALDATE));
         Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toInt(CorePublicConsts.MIN_LOCALTIME));
         Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toInt(CorePublicConsts.MIN_LOCALDATETIME));
@@ -230,35 +230,34 @@ public class PrimitiveUtilTest {
         Assertions.assertEquals(PrimitiveUtil.toInt(false), 0);
 
         Assertions.assertEquals(PrimitiveUtil.toInt((LocalDate) null), 0);
-        Assertions.assertEquals(PrimitiveUtil.toInt((LocalTime)null), 0);
+        Assertions.assertEquals(PrimitiveUtil.toInt((LocalTime) null), 0);
         Assertions.assertEquals(PrimitiveUtil.toInt((LocalDateTime) null), 0);
-        Assertions.assertEquals(PrimitiveUtil.toInt(CorePublicConsts.MIN_LOCALDATE), (int)CorePublicConsts.MIN_LOCALDATE.toEpochDay());
+        Assertions.assertEquals(PrimitiveUtil.toInt(CorePublicConsts.MIN_LOCALDATE), (int) CorePublicConsts.MIN_LOCALDATE.toEpochDay());
         Assertions.assertEquals(PrimitiveUtil.toInt(CorePublicConsts.MIN_LOCALTIME), CorePublicConsts.MIN_LOCALTIME.toSecondOfDay());
-        Assertions.assertEquals(PrimitiveUtil.toInt(CorePublicConsts.MIN_LOCALDATETIME), (int)CorePublicConsts.MIN_LOCALDATETIME.toEpochSecond(ZoneOffset.UTC));
+        Assertions.assertEquals(PrimitiveUtil.toInt(CorePublicConsts.MIN_LOCALDATETIME), (int) CorePublicConsts.MIN_LOCALDATETIME.toEpochSecond(ZoneOffset.UTC));
     }
 
     @Test
     @DisplayName("Deve validar toDouble")
     public void UI_CHECK_toDouble() {
 
-        List.of("0",12D,1L,1,LocalDate.now(),LocalTime.now(), LocalDateTime.now(),UUID.randomUUID())
+        List.of("0", 12D, 1L, 1, LocalDate.now(), LocalTime.now(), LocalDateTime.now(), UUID.randomUUID())
                 .forEach(value -> {
                     Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toDouble(value));
                 });
 
-        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toDouble((String)null));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toDouble((String) null));
         Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toDouble(""));
         Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toDouble(""));
-        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toDouble(100.11001D,2));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toDouble(100.11001D, 2));
         Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toDouble(0D, 0));
 
         Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toDouble((LocalDate) null));
         Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toDouble((LocalTime) null));
-        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toDouble((LocalDateTime)null));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toDouble((LocalDateTime) null));
         Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toDouble(CorePublicConsts.MIN_LOCALDATE));
         Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toDouble(CorePublicConsts.MIN_LOCALTIME));
         Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toDouble(CorePublicConsts.MIN_LOCALDATETIME));
-
 
 
         Assertions.assertEquals(PrimitiveUtil.toDouble(""), 0);
@@ -295,11 +294,11 @@ public class PrimitiveUtilTest {
         Assertions.assertEquals(PrimitiveUtil.toDouble(false), 0);
 
         Assertions.assertEquals(PrimitiveUtil.toDouble((LocalDate) null), 0);
-        Assertions.assertEquals(PrimitiveUtil.toDouble((LocalTime)null), 0);
+        Assertions.assertEquals(PrimitiveUtil.toDouble((LocalTime) null), 0);
         Assertions.assertEquals(PrimitiveUtil.toDouble((LocalDateTime) null), 0);
-        Assertions.assertEquals(PrimitiveUtil.toDouble(CorePublicConsts.MIN_LOCALDATE), (double)CorePublicConsts.MIN_LOCALDATE.toEpochDay());
+        Assertions.assertEquals(PrimitiveUtil.toDouble(CorePublicConsts.MIN_LOCALDATE), (double) CorePublicConsts.MIN_LOCALDATE.toEpochDay());
         Assertions.assertEquals(PrimitiveUtil.toDouble(CorePublicConsts.MIN_LOCALTIME), (double) CorePublicConsts.MIN_LOCALTIME.toSecondOfDay());
-        Assertions.assertEquals(PrimitiveUtil.toDouble(CorePublicConsts.MIN_LOCALDATETIME), (double)CorePublicConsts.MIN_LOCALDATETIME.toEpochSecond(ZoneOffset.UTC));
+        Assertions.assertEquals(PrimitiveUtil.toDouble(CorePublicConsts.MIN_LOCALDATETIME), (double) CorePublicConsts.MIN_LOCALDATETIME.toEpochSecond(ZoneOffset.UTC));
     }
 
     @Test
@@ -307,32 +306,32 @@ public class PrimitiveUtilTest {
     public void UI_CHECK_toDate() {
         var dt19010101 = LocalDate.of(1901, 1, 1);
 
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toDate((Object) null));
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toDate("(Object)"));
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toDate((Object)dt19010101.toString()));
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toDate(LocalDate.now()));
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toDate(LocalTime.now()));
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toDate(LocalDateTime.now()));
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toDate((Object)"1901-01-01"));
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toDate((Object)0));
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toDate((Object)0L));
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toDate((Object) 0D));
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toDate((Object) 0.01));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toDate((Object) null));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toDate("(Object)"));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toDate((Object) dt19010101.toString()));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toDate(LocalDate.now()));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toDate(LocalTime.now()));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toDate(LocalDateTime.now()));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toDate((Object) "1901-01-01"));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toDate((Object) 0));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toDate((Object) 0L));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toDate((Object) 0D));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toDate((Object) 0.01));
 
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toDate((String)null));
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toDate(""));
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toDate(dt19010101.toString()));
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toDate("1901-01-01"));
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toDate(0));
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toDate(0L));
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toDate(0D));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toDate((String) null));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toDate(""));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toDate(dt19010101.toString()));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toDate("1901-01-01"));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toDate(0));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toDate(0L));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toDate(0D));
 
         Assertions.assertNull(PrimitiveUtil.toDate(""));
         Assertions.assertEquals(PrimitiveUtil.toDate(dt19010101.toString()), dt19010101);
         Assertions.assertEquals(PrimitiveUtil.toDate("1901-01-01"), dt19010101);
-        Assertions.assertEquals(PrimitiveUtil.toDate((long)CorePublicConsts.MIN_LOCALDATE.toEpochDay()), CorePublicConsts.MIN_LOCALDATE);
-        Assertions.assertEquals(PrimitiveUtil.toDate((int)CorePublicConsts.MIN_LOCALDATE.toEpochDay()), CorePublicConsts.MIN_LOCALDATE);
-        Assertions.assertEquals(PrimitiveUtil.toDate((double)CorePublicConsts.MIN_LOCALDATE.toEpochDay()), CorePublicConsts.MIN_LOCALDATE);
+        Assertions.assertEquals(PrimitiveUtil.toDate((long) CorePublicConsts.MIN_LOCALDATE.toEpochDay()), CorePublicConsts.MIN_LOCALDATE);
+        Assertions.assertEquals(PrimitiveUtil.toDate((int) CorePublicConsts.MIN_LOCALDATE.toEpochDay()), CorePublicConsts.MIN_LOCALDATE);
+        Assertions.assertEquals(PrimitiveUtil.toDate((double) CorePublicConsts.MIN_LOCALDATE.toEpochDay()), CorePublicConsts.MIN_LOCALDATE);
     }
 
     @Test
@@ -340,48 +339,48 @@ public class PrimitiveUtilTest {
     public void UI_CHECK_toTime() {
         var tm010203 = LocalTime.of(1, 2, 3);
 
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toTime((Object)""));
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toTime(LocalDate.now()));
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toTime(LocalTime.now()));
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toTime(LocalDateTime.now()));
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toTime(tm010203));
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toTime((Object)tm010203.toString()));
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toTime((Object)"01:02:03"));
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toTime((Object)null));
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toTime((Object)"23:59:59.111222333"));
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toTime((Object)"23:59:59"));
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toTime((Object)"23:59:00"));
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toTime((Object)"23:59"));
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toTime((Object)0));
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toTime((Object)0L));
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toTime((Object)0D));
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toTime((Object)0.00));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toTime((Object) ""));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toTime(LocalDate.now()));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toTime(LocalTime.now()));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toTime(LocalDateTime.now()));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toTime(tm010203));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toTime((Object) tm010203.toString()));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toTime((Object) "01:02:03"));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toTime((Object) null));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toTime((Object) "23:59:59.111222333"));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toTime((Object) "23:59:59"));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toTime((Object) "23:59:00"));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toTime((Object) "23:59"));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toTime((Object) 0));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toTime((Object) 0L));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toTime((Object) 0D));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toTime((Object) 0.00));
 
 
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toTime(""));
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toTime((String)null));
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toTime(tm010203.toString()));
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toTime("01:02:03"));
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toTime(null));
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toTime("23:59:59.111222333"));
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toTime("23:59:59"));
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toTime("23:59:00"));
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toTime("23:59"));
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toTime(0));
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toTime(0L));
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toTime(0D));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toTime(""));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toTime((String) null));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toTime(tm010203.toString()));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toTime("01:02:03"));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toTime(null));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toTime("23:59:59.111222333"));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toTime("23:59:59"));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toTime("23:59:00"));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toTime("23:59"));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toTime(0));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toTime(0L));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toTime(0D));
 
         Assertions.assertNull(PrimitiveUtil.toTime(""));
         Assertions.assertEquals(PrimitiveUtil.toTime(tm010203.toString()), tm010203);
         Assertions.assertEquals(PrimitiveUtil.toTime("01:02:03"), tm010203);
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toTime(null));
-        Assertions.assertEquals(PrimitiveUtil.toTime("23:59:59"),LocalTime.of(23,59,59));
-        Assertions.assertEquals(PrimitiveUtil.toTime("23:59:00"),LocalTime.of(23,59,00));
-        Assertions.assertEquals(PrimitiveUtil.toTime("23:59"),LocalTime.of(23,59,00));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toTime(null));
+        Assertions.assertEquals(PrimitiveUtil.toTime("23:59:59"), LocalTime.of(23, 59, 59));
+        Assertions.assertEquals(PrimitiveUtil.toTime("23:59:00"), LocalTime.of(23, 59, 00));
+        Assertions.assertEquals(PrimitiveUtil.toTime("23:59"), LocalTime.of(23, 59, 00));
 
-        Assertions.assertEquals(PrimitiveUtil.toTime((long)CorePublicConsts.MIN_LOCALTIME.toSecondOfDay()), CorePublicConsts.MIN_LOCALTIME);
-        Assertions.assertEquals(PrimitiveUtil.toTime((int)CorePublicConsts.MIN_LOCALTIME.toSecondOfDay()), CorePublicConsts.MIN_LOCALTIME);
-        Assertions.assertEquals(PrimitiveUtil.toTime((double)CorePublicConsts.MIN_LOCALTIME.toSecondOfDay()), CorePublicConsts.MIN_LOCALTIME);
+        Assertions.assertEquals(PrimitiveUtil.toTime((long) CorePublicConsts.MIN_LOCALTIME.toSecondOfDay()), CorePublicConsts.MIN_LOCALTIME);
+        Assertions.assertEquals(PrimitiveUtil.toTime((int) CorePublicConsts.MIN_LOCALTIME.toSecondOfDay()), CorePublicConsts.MIN_LOCALTIME);
+        Assertions.assertEquals(PrimitiveUtil.toTime((double) CorePublicConsts.MIN_LOCALTIME.toSecondOfDay()), CorePublicConsts.MIN_LOCALTIME);
 
     }
 
@@ -390,27 +389,27 @@ public class PrimitiveUtilTest {
     public void UI_CHECK_toDateTime() {
         var dt19010101 = LocalDateTime.of(LocalDate.of(1901, 1, 1), LocalTime.of(1, 2, 3));
 
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toDateTime(LocalDate.now()));
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toDateTime(LocalTime.now()));
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toDateTime(LocalDateTime.now()));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toDateTime(LocalDate.now()));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toDateTime(LocalTime.now()));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toDateTime(LocalDateTime.now()));
 
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toDateTime((Object)null));
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toDateTime((Object)""));
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toDateTime(dt19010101));
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toDateTime((Object)"1901-01-01T01:02:03"));
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toDateTime((Object)0));
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toDateTime((Object)1.715027295E9));
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toDateTime((Object)0L));
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toDateTime((Object) 0D));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toDateTime((Object) null));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toDateTime((Object) ""));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toDateTime(dt19010101));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toDateTime((Object) "1901-01-01T01:02:03"));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toDateTime((Object) 0));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toDateTime((Object) 1.715027295E9));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toDateTime((Object) 0L));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toDateTime((Object) 0D));
 
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toDateTime((String)null));
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toDateTime(""));
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toDateTime(dt19010101.toString()));
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toDateTime("1901-01-01T01:02:03"));
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toDateTime(0));
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toDateTime(1.715027295E9));
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toDateTime(0L));
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toDateTime(0D));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toDateTime((String) null));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toDateTime(""));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toDateTime(dt19010101.toString()));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toDateTime("1901-01-01T01:02:03"));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toDateTime(0));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toDateTime(1.715027295E9));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toDateTime(0L));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toDateTime(0D));
 
         Assertions.assertNull(PrimitiveUtil.toDateTime(""));
         Assertions.assertNull(PrimitiveUtil.toDateTime(0));
@@ -418,7 +417,7 @@ public class PrimitiveUtilTest {
         Assertions.assertEquals(PrimitiveUtil.toDateTime("1901-01-01T01:02:03"), dt19010101);
 
 //        Assertions.assertThrows(NullPointerException.class,() -> new ConverterUtil((LocalDateTime) null).toLocalTime());
-        Assertions.assertEquals(PrimitiveUtil.toDateTime(1.715027295E9), LocalDateTime.of(LocalDate.of(2024,5,6), LocalTime.of(20,28,15)));
+        Assertions.assertEquals(PrimitiveUtil.toDateTime(1.715027295E9), LocalDateTime.of(LocalDate.of(2024, 5, 6), LocalTime.of(20, 28, 15)));
         Assertions.assertEquals(PrimitiveUtil.toDateTime("1901-01-01"), CorePublicConsts.MIN_LOCALDATETIME);
         Assertions.assertEquals(PrimitiveUtil.toDateTime("1901-01-01T00"), CorePublicConsts.MIN_LOCALDATETIME);
         Assertions.assertEquals(PrimitiveUtil.toDateTime("1901-01-01T00:00"), CorePublicConsts.MIN_LOCALDATETIME);
@@ -426,7 +425,7 @@ public class PrimitiveUtilTest {
         Assertions.assertEquals(PrimitiveUtil.toDateTime("1901-01-01T23:59:59.999"), CorePublicConsts.MIN_LOCALDATETIME_MAX_TIME);
 
         Assertions.assertEquals(PrimitiveUtil.toDateTime(CorePublicConsts.MIN_LOCALDATETIME.toEpochSecond(ZoneOffset.UTC)), CorePublicConsts.MIN_LOCALDATETIME);
-        Assertions.assertEquals(PrimitiveUtil.toDateTime((double)CorePublicConsts.MIN_LOCALDATETIME.toEpochSecond(ZoneOffset.UTC)), CorePublicConsts.MIN_LOCALDATETIME);
+        Assertions.assertEquals(PrimitiveUtil.toDateTime((double) CorePublicConsts.MIN_LOCALDATETIME.toEpochSecond(ZoneOffset.UTC)), CorePublicConsts.MIN_LOCALDATETIME);
     }
 
     @Test
@@ -474,8 +473,8 @@ public class PrimitiveUtilTest {
         Assertions.assertTrue(PrimitiveUtil.isEmpty((Map) null));
 
         //noinspection ConstantValue
-        Assertions.assertTrue(PrimitiveUtil.isEmpty((Object)null));
-        Assertions.assertTrue(PrimitiveUtil.isEmpty((String)null));
+        Assertions.assertTrue(PrimitiveUtil.isEmpty((Object) null));
+        Assertions.assertTrue(PrimitiveUtil.isEmpty((String) null));
         Assertions.assertTrue(PrimitiveUtil.isEmpty(""));
         Assertions.assertTrue(PrimitiveUtil.isEmpty(0));
         Assertions.assertTrue(PrimitiveUtil.isEmpty(0L));
@@ -519,8 +518,8 @@ public class PrimitiveUtilTest {
                 new Check<>(curDate, curDate.plusDays(1), curDate, false),
                 new Check<>(curDate, curDate, curDate.minusDays(1), false)
         );
-        for (var check : listDate){
-            Assertions.assertDoesNotThrow(()->PrimitiveUtil.inRange(check.v, check.begin, check.end));
+        for (var check : listDate) {
+            Assertions.assertDoesNotThrow(() -> PrimitiveUtil.inRange(check.v, check.begin, check.end));
             Assertions.assertEquals(PrimitiveUtil.inRange(check.v, check.begin, check.end), check.r);
         }
 
@@ -573,8 +572,8 @@ public class PrimitiveUtilTest {
         var uuid = UUID.fromString("c4ca4238-a0b9-2382-0dcc-509a6f75849b");
         var uuid_str = "c4ca4238a0b923820dcc509a6f75849b";
 
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toUUID(""));
-        Assertions.assertDoesNotThrow(()->PrimitiveUtil.toUUID(null));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toUUID(""));
+        Assertions.assertDoesNotThrow(() -> PrimitiveUtil.toUUID(null));
 
         Assertions.assertNull(PrimitiveUtil.toUUID(""));
         Assertions.assertEquals(PrimitiveUtil.toUUID(uuid.toString()), uuid);
@@ -605,13 +604,13 @@ public class PrimitiveUtilTest {
         Assertions.assertTrue(PrimitiveUtil.toMap("...").isEmpty());
         Assertions.assertTrue(PrimitiveUtil.toMap("{}").isEmpty());
         {
-            var map=PrimitiveUtil.toMap("{\"a1\":\"v1\"}");
+            var map = PrimitiveUtil.toMap("{\"a1\":\"v1\"}");
             Assertions.assertEquals(map.size(), 1);
-            map=PrimitiveUtil.toMap("{\"a1\":\"v1\",\"a2\":\"v2\"}");
+            map = PrimitiveUtil.toMap("{\"a1\":\"v1\",\"a2\":\"v2\"}");
             Assertions.assertEquals(map.size(), 2);
-            map=PrimitiveUtil.toMap("{\"a1\":\"v1\",\"a2\":\"v2\",\"a3\":\"v3\"}");
+            map = PrimitiveUtil.toMap("{\"a1\":\"v1\",\"a2\":\"v2\",\"a3\":\"v3\"}");
             Assertions.assertEquals(map.size(), 3);
-            map=PrimitiveUtil.toMap("{\"a1\":\"v1\",\"a2\":\"v2\",\"a3\":\"v3\",\"a4\":\"v4\"}");
+            map = PrimitiveUtil.toMap("{\"a1\":\"v1\",\"a2\":\"v2\",\"a3\":\"v3\",\"a4\":\"v4\"}");
             Assertions.assertEquals(map.size(), 4);
         }
     }
@@ -625,15 +624,15 @@ public class PrimitiveUtilTest {
         Assertions.assertTrue(PrimitiveUtil.toList("[]").isEmpty());
 
         {
-            var list=PrimitiveUtil.toList("[1,2,3,4]");
+            var list = PrimitiveUtil.toList("[1,2,3,4]");
             Assertions.assertEquals(list.size(), 4);
-            list=PrimitiveUtil.toList("[\"1\"]");
+            list = PrimitiveUtil.toList("[\"1\"]");
             Assertions.assertEquals(list.size(), 1);
-            list=PrimitiveUtil.toList("[\"1\",\"2\"]");
+            list = PrimitiveUtil.toList("[\"1\",\"2\"]");
             Assertions.assertEquals(list.size(), 2);
-            list=PrimitiveUtil.toList("[\"1\",\"2\",\"3\"]");
+            list = PrimitiveUtil.toList("[\"1\",\"2\",\"3\"]");
             Assertions.assertEquals(list.size(), 3);
-            list=PrimitiveUtil.toList("[\"1\",\"2\",\"3\",\"4\"]");
+            list = PrimitiveUtil.toList("[\"1\",\"2\",\"3\",\"4\"]");
             Assertions.assertEquals(list.size(), 4);
         }
     }
@@ -642,20 +641,20 @@ public class PrimitiveUtilTest {
     @DisplayName("Deve validar toStringList")
     public void UI_CHECK_toStringList() {
         Assertions.assertTrue(PrimitiveUtil.toStringList(null).isEmpty());
-        Assertions.assertEquals(PrimitiveUtil.toStringList("...").size(),1);
+        Assertions.assertEquals(PrimitiveUtil.toStringList("...").size(), 1);
         Assertions.assertTrue(PrimitiveUtil.toStringList("").isEmpty());
         Assertions.assertTrue(PrimitiveUtil.toStringList("[]").isEmpty());
 
         {
-            var list=PrimitiveUtil.toStringList("[1,2,3,4]");
+            var list = PrimitiveUtil.toStringList("[1,2,3,4]");
             Assertions.assertEquals(list.size(), 4);
-            list=PrimitiveUtil.toStringList("[\"1\"]");
+            list = PrimitiveUtil.toStringList("[\"1\"]");
             Assertions.assertEquals(list.size(), 1);
-            list=PrimitiveUtil.toStringList("[\"1\",\"2\"]");
+            list = PrimitiveUtil.toStringList("[\"1\",\"2\"]");
             Assertions.assertEquals(list.size(), 2);
-            list=PrimitiveUtil.toStringList("[\"1\",\"2\",\"3\"]");
+            list = PrimitiveUtil.toStringList("[\"1\",\"2\",\"3\"]");
             Assertions.assertEquals(list.size(), 3);
-            list=PrimitiveUtil.toStringList("[\"1\",\"2\",\"3\",\"4\"]");
+            list = PrimitiveUtil.toStringList("[\"1\",\"2\",\"3\",\"4\"]");
             Assertions.assertEquals(list.size(), 4);
         }
 
@@ -667,7 +666,6 @@ public class PrimitiveUtilTest {
         Assertions.assertEquals(PrimitiveUtil.toPath(null), null);
         Assertions.assertEquals(PrimitiveUtil.toPath("/tmp/tmp"), Path.of("/tmp/tmp"));
     }
-
 
 
 }
